tests/parsing/cmc/errors/162.expected
File "tests/parsing/cmc/errors/162.cmc", line 1, character 14-15:
1 | (define-system)
                  ^
Error while parsing a system definition, read a closing parenthesis,
      but expected a system name symbol.
